Add support for jlink and jpackage tools to generate self-contained Java application