@@ -6,20 +6,22 @@
 
     <groupId>com.gdi</groupId>
     <artifactId>jfxfractals</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <properties>
+        <app.name>${project.artifactId}</app.name>
+        <app.version>${project.version}</app.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <mainClass>com.gdi.jfxfractals.AppLauncher</mainClass>
-        <mainJfxClass>com.gdi.jfxfractals.ui.MainApp</mainJfxClass>
+        <main-class>com.gdi.jfxfractals.ui.MainApp</main-class>
         <toolchain.version>17</toolchain.version>
         <toolchain.vendor>openjdk</toolchain.vendor>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <slf4jVersion>1.7.36</slf4jVersion>
-        <log4j.version>2.17.0</log4j.version>
+        <log4j.version>2.17.2</log4j.version>
+        <logback.version>1.2.11</logback.version>
         <openjfxVersion>17.0.2</openjfxVersion>
         <lwjgl.version>3.2.3</lwjgl.version>
         <lwjgl.natives>natives-windows</lwjgl.natives>
@@ -27,6 +29,11 @@
         <guice.version>5.0.1</guice.version>
         <guava.version>30.1.1-jre</guava.version>
         <joml.version>1.10.1</joml.version>
+        <windows.upgrade.uuid>5688e219-9578-4202-8cb2-cbf3e8ad2b7a</windows.upgrade.uuid>
+        <jvm.modules>
+            javafx.base,javafx.graphics,javafx.media,javafx.controls,javafx.fxml,javafx.swing,java.base,javafx.web,java.logging,java.naming,java.management
+        </jvm.modules>
+        <windows.vendor>Sample</windows.vendor>
     </properties>
     <dependencies>
         <dependency>
@@ -34,7 +41,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4jVersion}</version>
         </dependency>
-
+       <!-- <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>${slf4jVersion}</version>
+        </dependency> -->
         <!-- Log4j API and Core implementation required for binding -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -51,10 +62,15 @@
             <artifactId>log4j-jul</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+       <!-- <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency> -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -277,13 +293,18 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -292,181 +313,55 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.0.0-M1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
                 <executions>
                     <execution>
+                        <!-- This copies all of the jar files declared by the Maven build into a single directory.
+                        This makes it easy to assemble the final installer package -->
                         <id>copy-dependencies</id>
-
+                        <phase>package</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>false</overWriteReleases>
-                            <overWriteSnapshots>false</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
+
                             <excludeGroupIds>
-                                junit,org.hamcrest,org.mockito,org.powermock,${project.groupId}
+                                org.openjfx,junit,org.hamcrest,org.mockito,org.powermock,${project.groupId}
                             </excludeGroupIds>
                         </configuration>
                     </execution>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>sources</goal>
-                        </goals>
-                    </execution>
                 </executions>
-                <configuration>
-                    <verbose>true</verbose>
-                    <detail>true</detail>
-                    <outputDirectory>${project.build.directory}</outputDirectory>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.10</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
-                    <programs>
-                        <program>
-                            <mainClass>${mainClass}</mainClass>
-                            <id>jfxfractals</id>
-                        </program>
-                    </programs>
-                    <extraJvmArguments>
-                        --add-modules=ALL-SYSTEM
-                        -Duser.language=en
-                        -Duser.country=US
-                        -Dfile.encoding=UTF-8
-                        -XX:+UseG1GC
-                        -Xmx256M
-                        -Djava.awt.headless=false
-                        -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
-                    </extraJvmArguments>
-                    <!--&#45;&#45;add-opens javafx.base/com.sun.javafx.collections=javafx.web-->
-                    <!--&#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED-->
-                    <repositoryLayout>flat</repositoryLayout>
-                    <useWildcardClassPath>true</useWildcardClassPath>
-                    <binFileExtensions>
-                        <!--<unix>.sh</unix>-->
-                    </binFileExtensions>
-                    <repositoryName>lib</repositoryName>
-                    <configurationDirectory>conf</configurationDirectory>
-                    <configurationSourceDirectory>${project.basedir}/conf</configurationSourceDirectory>
-                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
-                    <!--<logsDirectory>log</logsDirectory>-->
-                    <showConsoleWindow>true</showConsoleWindow>
-                    <!--<unixScriptTemplate>${project.basedir}/src/main/resources/assembly/unixBinTemplate.sh</unixScriptTemplate>-->
+                    <outputDirectory>${project.build.directory}/dependency</outputDirectory>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>createDistJar</id>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <target>
-                                <echo message="${project.build.directory}"/>
-                                <mkdir dir="${project.build.directory}"/>
-                                <zip destfile="${project.build.directory}/jfxfractals-${project.version}.zip"
-                                     basedir="${project.build.directory}/appassembler/">
-                                </zip>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/app.xml</descriptor>
-                    </descriptors>
-                    <archive>
-                        <manifest>
-                            <mainClass>${mainClass}</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <createDependencyReducedPom>true</createDependencyReducedPom>
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*.SF</exclude>
-                                <exclude>META-INF/*.DSA</exclude>
-                                <exclude>META-INF/*.RSA</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                    <transformers>
-                        <transformer
-                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                        <transformer
-                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>${mainClass}</mainClass>
-                        </transformer>
-                    </transformers>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -492,8 +387,62 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>jfxfractals/${mainJfxClass}</mainClass>
+                    <mainClass>jfxfractals/${main-class}</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+                <!-- https://github.com/wiverson/jtoolprovider-plugin -->
+                <groupId>io.github.wiverson</groupId>
+                <artifactId>jtoolprovider-plugin</artifactId>
+                <version>1.0.34</version>
+                <executions>
+                    <!-- This command runs jlink, generating a custom JVM by combining the JavaFX modules bundled in
+                    this project with the JDK modules. -->
+                    <execution>
+                        <id>jlink</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>java-tool</goal>
+                        </goals>
+                        <configuration>
+                            <toolName>jlink</toolName>
+                            <removeDirectories>${project.build.directory}/jvm-image/</removeDirectories>
+                            <modulePath>
+                                ${project.basedir}/javafx-${os.detected.classifier}/javafx-jmods-${openjfxVersion}/
+                            </modulePath>
+                            <addModules>${jvm.modules}</addModules>
+                            <output>${project.build.directory}/jvm-image</output>
+                            <args>
+                                <arg>--strip-native-commands</arg>
+                                <arg>--no-header-files</arg>
+                                <arg>--strip-debug</arg>
+                                <arg>--no-man-pages</arg>
+                                <arg>--compress=2</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                    <!-- The command that actually generates the installer. The options for each platform
+                    are found the /src/packaging directory. These files are copied into the target directory by
+                    the Maven resources plugin, which does the filtering to replace the original values with
+                    the actual Maven properties.
+                    https://github.com/wiverson/jtoolprovider-plugin/blob/main/java-tool-doc.md
+                    -->
+                    <execution>
+                        <id>jpackage</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>java-tool</goal>
+                        </goals>
+                        <configuration>
+                            <toolName>jpackage</toolName>
+                            <writeOutputToLog>true</writeOutputToLog>
+                            <writeErrorsToLog>true</writeErrorsToLog>
+                            <failOnError>true</failOnError>
+                            <removeDirectories>${project.build.directory}/installer-work</removeDirectories>
+                            <args>@${project.build.directory}/packaging/${os.detected.name}-jpackage.txt</args>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
         <resources>
@@ -517,10 +466,53 @@
             <resource>
                 <directory>src/main/java</directory>
             </resource>
+            <resource>
+                <!-- Here we are processing the platform-specific jpackage command files, adding in Maven
+                 properties for configuration. -->
+                <directory>${project.basedir}/src/packaging</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/packaging</targetPath>
+            </resource>
         </resources>
 
-    </build>
+        <extensions>
+            <!-- Used to inject the OS and architecture values in a consistent manner -->
+            <!-- https://github.com/trustin/os-maven-plugin -->
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+            </extension>
+        </extensions>
 
+    </build>
+    <profiles>
+        <!-- We use the built-in Maven profile activation system to set the platform property.
+        These properties are then use to build the directory paths to the platform specific resources.
+        It would be great if Maven automatically added the os family as a property by default
+         -->
+
+        <profile>
+            <id>macos-sign</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <macos.sign>--mac-sign</macos.sign>
+                <!-- You will have to replace this with your own dev information from your Apple identity -->
+                <macos.sign.identity>--mac-signing-key-user-name "Company Name, Inc. (BXPXTXC35S)"</macos.sign.identity>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>windows-active</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
